# mcp-server-salesforce

./: LICENSE  README.md  README_JA.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
src/mcp_server_salesforce/: __init__.py  constants.py  models.py  salesforce_client.py  server.py  state.py  uri_handlers.py  utils.py
tests/: test_salesforce_client.py  test_server.py  test_state.py  test_uri_handlers.py
